правка alertManager
