# storage/api-docs/api-docs.json
@@ -11,6 +11,83 @@
         }
     ],
     "paths": {
+        "/sendMessage": {
+            "post": {
+                "tags": [
+                    "AlertManager"
+                ],
+                "summary": "sendMessage",
+                "description": "sendMessage by api_token, text",
+                "operationId": "sendMessage",
+                "requestBody": {
+                    "description": "Бот воспринимает только text = английский",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "api_token",
+                                    "text"
+                                ],
+                                "properties": {
+                                    "api_token": {
+                                        "type": "string",
+                                        "example": "OzQ50ke3GElJMNvBZm8uksngp8dqNVYAHqr5CGHN9visYI0TYHg1fFdhsNf8BqTpwqDwXqcPhcxzN3Pj"
+                                    },
+                                    "text": {
+                                        "type": "string",
+                                        "example": "Error"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Wrong response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result": {
+                                            "type": "string",
+                                            "example": "error"
+                                        },
+                                        "error": {
+                                            "type": "string",
+                                            "example": "User does not exist"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "result": {
+                                            "type": "string",
+                                            "example": "success"
+                                        },
+                                        "success": {
+                                            "type": "string",
+                                            "example": "Bot sent a message"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "tags": [
@@ -323,83 +400,6 @@
                                         "api_token": {
                                             "type": "string",
                                             "example": "Mail changed successfully"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/sendMessage": {
-            "post": {
-                "tags": [
-                    "BOT"
-                ],
-                "summary": "sendMessage",
-                "description": "sendMessage by api_token, text",
-                "operationId": "sendMessage",
-                "requestBody": {
-                    "description": "bot",
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "api_token",
-                                    "text"
-                                ],
-                                "properties": {
-                                    "api_token": {
-                                        "type": "string",
-                                        "example": "OzQ50ke3GElJMNvBZm8uksngp8dqNVYAHqr5CGHN9visYI0TYHg1fFdhsNf8BqTpwqDwXqcPhcxzN3Pj"
-                                    },
-                                    "text": {
-                                        "type": "string",
-                                        "example": "Error"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "401": {
-                        "description": "Wrong response",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "result": {
-                                            "type": "string",
-                                            "example": "error"
-                                        },
-                                        "error": {
-                                            "type": "string",
-                                            "example": "User does not exist"
-                                        }
-                                    },
-                                    "type": "object"
-                                }
-                            }
-                        }
-                    },
-                    "200": {
-                        "description": "Success",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "properties": {
-                                        "result": {
-                                            "type": "string",
-                                            "example": "success"
-                                        },
-                                        "success": {
-                                            "type": "string",
-                                            "example": "Bot sent a message"
                                         }
                                     },
                                     "type": "object"
